2009-04-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.40

	* src/home/hd-title-bar.c (hd_title_bar_init): Do not call
	clutter_label_set_use_markup until we know about the title text.
	(hd_title_bar_set_window): Use Pango markup only if the text has that.
	* src/mb/hd-decor.c (hd_decor_create_actors): Use Pango markup only if
	the text has that. Fixes: NB#108303

2009-04-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (hd_transition_popup):
	  Don't be confused by fullscreen things and pop the bottom.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Removed an older condition that prevented fullscreen dialogs
	  from causing rotation.  As a consequence fullscreen dialogs
	  like the incoming call will be will be able to rotate not only
	  in home view but in app view.  This is in relation with NB#11111.
	  (no kidding i really own that bug)

2009-04-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed launcher to UI specs.
	Fixes: NB#109134, 111112

	* src/launcher/hd-launcher-tile.c: Use SmallSystemFont.
	* src/launcher/hd-launcher.c: Don't display title and icon for subpages.

2009-04-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c (construct_buttons): In case decor is not yet
	created (d == NULL), allow close button for non-stackables and
	secondaries acting as the stack leader.

2009-04-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#108826 during drag and drop or panning , device is getting black
	          screen , reboot is required to use any application
	NB#109753 Tap and hold on any link received in mail - blanks ui
	completely

	* src/home/hd-render-manager.c:
	  hd_render_manager_append_geo_cb():
	    Don't allow blocker rectangles with negative position.
	  hd_render_manager_is_visible():
	    Fix integer propagation mistakes which caused some if()s to fail,
	    thus some clients to block others which it shouldn't thus hiding