@@ -1,3 +1,8 @@
+2009-04-17  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	* src/home/hd-scrollable-group.c: Fix segfault on exit. Fix for other
+	  crash that happens related to NB#110878
+
 2009-04-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.40
